# trainerapp

./: .gitignore  docker-compose.yml  postgresql details.txt
backend/fitness-api/: .env.example  Cargo.toml  Dockerfile
backend/fitness-api/migrations/: 20240327120000_initial_schema.sql  20260329180000_trainees_and_workout_trainee.sql  20260329200000_user_names.sql  20260330100000_user_roles.sql  20260330103000_trainee_age.sql  20260330113000_seed_exercise_library.sql  20260330120000_exercise_catalog.sql  20260330150000_set_type.sql
backend/fitness-api/src/: config.rs  error.rs  lib.rs  main.rs
backend/fitness-api/src/auth/: extractor.rs  jwt.rs  mod.rs  password.rs
backend/fitness-api/src/db/: mod.rs
backend/fitness-api/src/handlers/: auth.rs  mod.rs  trainee.rs  workout.rs
backend/fitness-api/src/models/: exercise.rs  mod.rs  set.rs  trainee.rs  user.rs  workout.rs  workout_exercise.rs
backend/fitness-api/src/repositories/: mod.rs  trainee_repository.rs  user_repository.rs  workout_repository.rs
backend/fitness-api/src/routes/: mod.rs
backend/fitness-api/src/services/: auth_service.rs  mod.rs  trainee_service.rs  workout_service.rs
backend/fitness-api/tests/: integration_workout.rs
frontend/: index.html  next.config.ts  package-lock.json  package.json  vite.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/src/: main.js  styles.css
